--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@ Marcio
 
 <h2>Subtitulo Teste</h2>      <!--subtitulo-->
 
-<p>
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus nemo quae quasi eligendi debitis blanditiis inventore possimus ipsum neque omnis aperiam nam, ad cum tempore eum quo quisquam, quis suscipit?
-</p>
+<p>               <!--abre Paragrafo-->
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus nemo quae quasi eligendi <br> blanditiis inventore possimus ipsum neque omnis aperiam nam, ad cum tempore eum quo quisquam, quis suscipit?
+</p>               <!--fecha Paragrafo-->
 
-<p>
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus nemo quae quasi eligendi debitis blanditiis inventore possimus ipsum neque omnis aperiam nam, ad cum tempore eum quo quisquam, quis suscipit?
-</p>
+<p>               <!--abre Paragrafo-->
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus nemo quae quasi<br> eligendi debitis blanditiis inventore possimus ipsum neque omnis aperiam nam, ad cum tempore eum quo quisquam, quis suscipit?
+</p>               <!--fecha Paragrafo-->
 
 </body>
 
+</html>
