--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body> <!--corpo da pagina-->
 
-    Marcio
+    Olá, eu sou o Márcio! <br>Bem-vindo ao meu cantinho na internet.<br> Por aqui, vou compartilhar minha jornada como pequeno empreendedor. A ideia é mostrar os bastidores, os desafios e as conquistas que encontro nesse caminho. Se você também está começando seu próprio negócio ou busca inspiração para dar o próximo passo, acompanhe por aqui!
 
     <h2>Subtitulo Teste</h2> <!--subtitulo-->
 
