--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina do Marcio</title> <!--Nome da Pagina-->
+    <title>Pagina do Marcio</title>               <!--Nome da Pagina-->
+    <link rel="stylesheet" href="style.css">      <!--LIGA LINGUAGEM HTML COM A CSS-->
 </head>
 
-<h1>Bem-vindo</h1> <!--Título-->
+<h1>Bem-vindo</h1>                                 <!--Título-->
 
-<body> <!--corpo da pagina-->
+<body>                                           <!--corpo da pagina-->
 
     Olá, eu sou o Márcio! <br>Bem-vindo ao meu cantinho na internet.<br> Por aqui, vou compartilhar minha jornada como
     pequeno empreendedor. <br>A ideia neste site é aprender a programar e ao mesmo tempo mostrar os bastidores, os
@@ -17,17 +18,17 @@
     inspiração para dar o próximo passo, acompanhe por aqui! O objetivo deste site só foi definido para que haja um
     contexto nesta página web
 
-    <h2>Subtitulo Teste</h2> <!--subtitulo-->
+    <h2>Subtitulo Teste</h2>                           <!--subtitulo-->
 
-    <p> <!--abre Paragrafo-->
+    <p>                                      <!--abre Paragrafo-->
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus nemo quae quasi eligendi <br> blanditiis
         inventore possimus ipsum neque omnis aperiam nam, ad cum tempore eum quo quisquam, quis suscipit?
-    </p> <!--fecha Paragrafo-->
+    </p>                                    <!--fecha Paragrafo-->
 
-    <p> <!--abre Paragrafo-->
+    <p>                                  <!--abre Paragrafo-->
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus nemo quae quasi<br> eligendi debitis
         blanditiis inventore possimus ipsum neque omnis aperiam nam, ad cum tempore eum quo quisquam, quis suscipit?
-    </p> <!--fecha Paragrafo-->
+    </p>                                 <!--fecha Paragrafo-->
 
     <iframe <iframe width="560" height="315" src="https://www.youtube.com/embed/ryISEgXkCac?si=q4se4tmkWABBOo-_"
         title="YouTube video player" frameborder="0"
