--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <body>                                           <!--corpo da pagina-->
 
+    <header>ALURALIX</header>    <!--cabeçalho-->
+
+    <section>
+        <div></div>
+        <div></div>
+        
+    </section>
+
     Olá, eu sou o Márcio! <br>Bem-vindo ao meu cantinho na internet.<br> Por aqui, vou compartilhar minha jornada como
     pequeno empreendedor. <br>A ideia neste site é aprender a programar e ao mesmo tempo mostrar os bastidores, os
     desafios e as conquistas que encontro nesse caminho. <br>Se você também está começando seu próprio negócio ou busca
